<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/ticket_form_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/ticket_form_info" >
    </TextView>

    <EditText
        android:id="@+id/forename_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/form_hint_forename"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/surname_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/form_hint_surname"
        android:inputType="textPersonName" >
    </EditText>

    <EditText
        android:id="@+id/phone_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/form_hint_phone"
        android:inputType="phone" >
    </EditText>

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/form_hint_email"
        android:inputType="textEmailAddress" >
    </EditText>

    <Button
        android:id="@+id/ticket_request_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ticket_request_button" >
    </Button>
    <EditText
        android:id="@+id/confirm_code_edittext"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/confirm_code_hint"
        android:inputType="number" />

    <Button
        android:id="@+id/confirm_code_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/confirm_code" >
    </Button>

    

</LinearLayout>